third_party/move/move-compiler-v2/tests/checking/typing/borrow_divergent.exp

Diagnostics:
error: unable to infer type: `?1`
  ┌─ tests/checking/typing/borrow_divergent.move:4:13
  │
4 │            &break;
  │             ^^^^^

error: unable to infer type: `?1`
   ┌─ tests/checking/typing/borrow_divergent.move:11:12
   │
11 │         &{ return };
   │            ^^^^^^

error: unable to infer type: `?1`
   ┌─ tests/checking/typing/borrow_divergent.move:18:21
   │
18 │         &(if (cond) return else return);
   │                     ^^^^^^
